--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,13 @@
   },
   "homepage": "https://github.com/jrbenito/hexo-deployer-onesignal#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.18.0",
-    "eslint-config-hexo": "^1.0.3"
+    "eslint-config-hexo": "^1.0.3",
+    "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "hexo-fs": "^0.1.6",
+    "hexo-util": "^0.6.0"
   }
 }
